--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon src/main.js",
     "build": "vite build",
+    "start": "serve dist -s -n -L -p 3000",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
-    "mysql2": "^3.6.0"
+    "mysql2": "^3.6.0",
+    "serve": "^14.2.1"
   }
 }
